# reborn

./: .gitignore  .gitmodules  README.md  compile_commands.json  minisys1a.bit  roadmap.md  xmake.lua
asm_test/: .gitignore  README.md  README_cn.md  replace.bat  replace.sh
asm_test/bitstream/: mooc16_1.bit  mooc16_2.bit  mooc16_3.bit  mooc16_4.bit
asm_test/output/: dmem32.coe  make.bat
asm_test/src/: FINAL1.asm  led_test.asm  mooc16_1.asm  mooc16_2.asm  mooc16_2.c  mooc16_3.asm  mooc16_3.c  mooc16_4.asm  mooc16_4.c  soctest.asm  t1.asm  temp.asm
cpu/backup/: bus.v  inst_rom.v  minisys1a.bit  openmips_min_sopc.v  regfile.v  sim_top.v  watchdog.v
cpu/cpu/: readme.md
cpu/m1a_reference/: vivado.jou
cpu/m1afinal/: .gitignore  m1afinal.xpr  sim_top_behav.wcfg
cpu/m1aours/: m1aours.xpr  vivado.jou  vivado_14156.backup.jou
cpu/minisys1/: .gitignore  minisys1.xpr  minisys_sim_behav.wcfg  readme.md  vivado.jou
cpu/minisys1a/: .gitignore  minisys-1a-cpu.xpr  minisys1a.xpr  minsys_sim_behav_testcase1.wcfg  vivado.jou  vivado_pid16900.str
cpu/tests/: Document1.asm  sw2led.asm  test_01.asm  test_02.asm  testcpu.s  testinterface.s
linker/: main.cpp
mide/: asmer.cpp  asmer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  xmake.lua
mua/: mua.cpp  out.txt
utils/: CMakeLists.txt  minisys1a_as.lua
utils/arch/: CMakeLists.txt
utils/minias/: CMakeLists.txt
utils/minias/include/: def.hpp  instr.hpp  minias.hpp
utils/minias/src/: instr.cpp  main.cpp  minias.cpp
utils/simu/: CMakeLists.txt
utils/simu/include/: core.hpp  simu.hpp
utils/simu/src/: main.cpp
(+982 files in other folders)
